--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     # --- Django and Core ---
     "Django==5.2.1",
+    "asgiref==3.9.1",
     "django-admin-interface==0.30.0",
     "django-autocomplete-light==3.12.1",
     "django-colorfield==0.14.0",
@@ -26,6 +27,7 @@ dependencies = [
 
     # --- Miscellaneous ---
     "json5==0.12.0",
+    "pygraphviz==1.14",
     "python-decouple==3.8",
     "roman==5.0"
 ]
