--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,68 @@
+# ------------------------
+# Environments & dependencies
+# ------------------------
 .venv/
 .env
-.gitignore
-# project files
+bcs/node_modules/
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# ------------------------
+# Python artifacts
+# ------------------------
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+
+# ------------------------
+# Logs & temporary files
+# ------------------------
 *.log
-.DS_Store
+*.out
+*.err
+*.dump
 *.swp
+
+# ------------------------
+# System/IDE files
+# ------------------------
+.DS_Store
 .idea/
-# text
+
+# ------------------------
+# Project-specific scratch/test files
+# ------------------------
 bcs/sources_to_models.py
 bcs/test_file.py
 bcs/test_file
 *.txt
-# stats
+
+# ------------------------
+# Generated data & stats
+# ------------------------
 stats/
-# assets
+
+# ------------------------
+# Assets (media, builds, static)
+# ------------------------
 bcs/media/
 bcs/staticfiles/
 bcs/drzewo/trees/
-bcs/node_modules/
 *.png
-# sql
+*.map
+
+# ------------------------
+# Database dumps/backups
+# ------------------------
 bcs/baza/baza_*.sql
 bcs/baza/backups/
-# scss
-*.map
-# ngrok
-*/.ngrok_*
+
+# ------------------------
+# Ngrok runtime files
+# ------------------------
+.ngrok_*
