chore(gitignore): allow nested docs folder and tracked txt files
- Update .gitignore to unignore all files inside bcs/docs/ and subfolders
- Ensures documentation checklists and policies are versioned

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,8 @@ bcs/sources_to_models.py
 bcs/test_file.py
 bcs/test_file
 *.txt
+!bcs/docs/
+!bcs/docs/**/*.txt
 
 # ------------------------
 # Generated data & stats
