refactor(gitignore): ignore SQL artifacts inside docker directory
- add pattern to exclude all `*.sql` files inside `docker/**`
- keeps repo clean from generated DB dumps placed in container-related dirs

Affected files:
- .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -62,6 +62,7 @@ bcs/drzewo/trees/
 # ------------------------
 bcs/baza/baza_*.sql
 bcs/baza/backups/
+docker/**/*.sql
 
 # ------------------------
 # Ngrok runtime files
