feat(docker-compose): introduce static volume and restructure mounts
- Replace local `./static` bind mounts with `static_volume`
- Mount `static_volume` for both Django and Nginx
- Add `static_volume` to top-level `volumes:` section
- Retain existing service structure while ensuring persistent staticfile storage

This change enables proper staticfile sharing between services and avoids host-bound static directories in production-like setups.

Affected files:
- docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,7 @@ services:
     volumes:
       # Mount your project source code (for dev)
       - ./bcs:/app
-      # Keep static files separate if needed
-      - ./static:/app/staticfiles
+      - static_volume:/app/staticfiles:rw
     env_file:
       - .env
     command: /app/entrypoint.prod.sh  # or "python manage.py runserver 0.0.0.0:8000" for dev
@@ -32,9 +31,10 @@ services:
       - "8001:80"
     volumes:
       - ./docker/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./static:/static:ro
+      - static_volume:/static:ro
     depends_on:
       - django-web
 
 volumes:
   postgres_data:
+  static_volume:
